adaptive in process

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
         </div>
     </section>
     <section class="gift">
-        <div class="container wow animate__fadeInLeft">
-            <h2 class="second-title">Уход за лицом в подарок</h2>
-            <p class="gift-text">Сходите на процедуру массажа камнями и мы сделаем вам альгинатную маску!</p>
-            <button type="button" class="btn gift-btn hvr-radial-in">Записаться на ритуал</button>
-        </div>
-        <div class="gift-image wow animate__fadeInRight" data-wow-offset="220">
-            <img src="images/gift-img.png" alt="">
+        <div class="container ">
+            <h2 class="second-title wow animate__fadeInLeft">Уход за лицом в подарок</h2>
+            <p class="gift-text wow animate__fadeInLeft">Сходите на процедуру массажа камнями и мы сделаем вам альгинатную маску!</p>
+            <button type="button wow animate__fadeInLeft" class="btn gift-btn hvr-radial-in">Записаться на ритуал</button>
+            <div class="gift-image wow animate__fadeInRight" data-wow-offset="220">
+                <img src="images/gift-img.png" alt="">
+            </div>
         </div>
         <div class="gift-bg">
             <img src="images/gift-bg.png" alt="">
