--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <body>
 <header class="header">
     <div class="container">
+        <div id="burger">&#9776;</div>
         <nav class="header-menu">
             <a href="#products" class="header-menu-item">Услуги</a>
             <a href="#team" class="header-menu-item">Мастера</a>
@@ -237,56 +238,62 @@
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master1.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Иван Лушинский</h3>
+                            <p class="team-item-skill">Стаж: 6 лет</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Иван Лушинский</h3>
-                        <p class="team-item-skill">Стаж: 6 лет</p>
-                    </div>
+
                 </div>
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master2.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Маргарита Линк</h3>
+                            <p class="team-item-skill">Стаж: 10 лет</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Маргарита Линк</h3>
-                        <p class="team-item-skill">Стаж: 10 лет</p>
-                    </div>
+
                 </div>
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master3.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Александра Морковная</h3>
+                            <p class="team-item-skill">Стаж: 4 года</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Александра Морковная</h3>
-                        <p class="team-item-skill">Стаж: 4 года</p>
-                    </div>
+
                 </div>
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master4.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Анна Павлова</h3>
+                            <p class="team-item-skill">Стаж: 8 лет</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Анна Павлова</h3>
-                        <p class="team-item-skill">Стаж: 8 лет</p>
-                    </div>
+
                 </div>
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master3.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Мария Прохорова</h3>
+                            <p class="team-item-skill">Стаж: 5 лет</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Мария Прохорова</h3>
-                        <p class="team-item-skill">Стаж: 5 лет</p>
-                    </div>
+
                 </div>
                 <div class="team-item">
                     <div class="team-item-image">
                         <img src="images/master5.jpg" alt="">
+                        <div class="team-item-info">
+                            <h3 class="team-item-name">Люсия Сью</h3>
+                            <p class="team-item-skill">Стаж: 15 лет</p>
+                        </div>
                     </div>
-                    <div class="team-item-info">
-                        <h3 class="team-item-name">Люсия Сью</h3>
-                        <p class="team-item-skill">Стаж: 15 лет</p>
-                    </div>
+
                 </div>
             </div>
         </div>
